--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,22 @@
 .App {
-  text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  font-size: calc(10px + 2vmin);
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.book-title-img {
+  width: 100%; /* Makes image fill the container width */
+  height: 400px; /* Set your desired uniform height */
+  object-fit: cover; /* Ensures image fills box without distortion */
+  border-radius: 4px; /* Optional: rounded corners */
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +26,32 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.book-title {
+  color: rgb(6, 47, 58);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.book-container {
+  height: 85vh;
+  border: 1px solid #ccc;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.book-image {
+  max-height: 400px;
+  width: auto;
+  object-fit: contain;
+}
+
+.book-text {
+  font-size: 1.9rem;
+  line-height: 2.5rem;
+  text-align: justify;
+  max-width: 100%;
+  color: #333;
+}
+.book-title {
+  font-size: 2.5rem;
 }
